# india-cohort-viz

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  testi.py
auxiliar_data/: column_type.JSON  columns.JSON
india_cohort_viz/: Helpers.py  Summary.py
